<?xml version="1.0" encoding="utf-8"?>
<layout>
    <!-- Simple vertical stack of different types of ui elements. Linear layout is best for such cases. -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_margin="20dp"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment">

        <TextView
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_the_next_page_you_will_find_list_of_shoes" />
        <TextView
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_on_them_to_view_details_or_click_on_fab_to_add_a_new_shoe" />

        <Button
            android:layout_marginTop="15dp"
  android:id="@+id/button_shoe_list"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>